--- a/zipcode/Base.lproj/Main.storyboard
+++ b/zipcode/Base.lproj/Main.storyboard
@@ -49,12 +49,46 @@
                     </tabBar>
                     <connections>
                         <segue destination="vkq-kB-cjR" kind="relationship" relationship="viewControllers" id="FK6-Gb-bwf"/>
+                        <segue destination="tyT-Fc-cLU" kind="relationship" relationship="viewControllers" id="cmY-Db-Gzr"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="aZt-ep-qTc"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0sF-YH-K67" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1165" y="23"/>
+        </scene>
+        <!--Current Location-->
+        <scene sceneID="Pmr-LA-7MX">
+            <objects>
+                <viewController id="tyT-Fc-cLU" customClass="ViewController3" customModule="zipcode" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a69-sV-lu6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gvl-HJ-0MO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TT4-cf-wHd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="XQ2-ga-rId">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XQ2-ga-rId" firstAttribute="top" secondItem="a69-sV-lu6" secondAttribute="bottom" id="UQp-KS-KDE"/>
+                            <constraint firstItem="XQ2-ga-rId" firstAttribute="leading" secondItem="TT4-cf-wHd" secondAttribute="leading" id="Vd5-ez-DSw"/>
+                            <constraint firstItem="Gvl-HJ-0MO" firstAttribute="top" secondItem="XQ2-ga-rId" secondAttribute="bottom" id="Z78-66-Eb0"/>
+                            <constraint firstAttribute="trailing" secondItem="XQ2-ga-rId" secondAttribute="trailing" id="aaJ-TN-hZr"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Current Location" id="yhn-m3-j1V"/>
+                    <connections>
+                        <outlet property="mapView2" destination="XQ2-ga-rId" id="fKn-ET-L31"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GwW-30-83P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-221" y="-228"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -149,7 +183,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-164" y="18"/>
+            <point key="canvasLocation" x="-175" y="605"/>
         </scene>
     </scenes>
 </document>
